# FractalExplorer

./: .gitignore  CMakeLists.txt  README.md  install.sh
assets/shader/: FragmentShaderFractal.glsl  FragmentShaderFractalExtended.glsl  VertexShaderFractal.glsl  VertexShaderFractalExtended.glsl
assets/shaders/: FragmentShaderBurningShip.glsl  FragmentShaderBurningShipExtended.glsl  FragmentShaderFractal.glsl  FragmentShaderFractalExtended.glsl  FragmentShaderJulia.glsl  FragmentShaderJuliaExtended.glsl  FragmentShaderMandelbrot.glsl  FragmentShaderMandelbrotExtended.glsl  FragmentShaderNewton.glsl  FragmentShaderNewtonExtended.glsl  VertexShaderFractal.glsl  VertexShaderFractalExtended.glsl
include/: BurningShip.h  BurningShipExtended.h  Fractal.h  FractalExplorer.h  Include.h  Julia.h  JuliaExtended.h  Mandelbrot.h  MandelbrotExtended.h  Newton.h  NewtonExtended.h
src/: BurningShip.cpp  BurningShipExtended.cpp  Fractal.cpp  FractalExplorer.cpp  Julia.cpp  JuliaExtended.cpp  Main.cpp  Mandelbrot.cpp  MandelbrotExtended.cpp  Newton.cpp  NewtonExtended.cpp
